--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
-
-<head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<link rel="stylesheet" href="index.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,7 +15,7 @@
 <body>
 	<header>
 		<div class="header-inner">
-			<img src="./images/pumpkin.png" class="pumpkin-img">
+			<img src="./images/pumpkin.png" alt="" class="pumpkin-img">
 			<div>
 				<h2>Pumpkin's Purrfect...</h2>
 				<h1>Meme Picker</h1>
