--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="header-inner">
 			<img src="./images/pumpkin.png" alt="" class="pumpkin-img">
 			<div>
-				<h2>Pumpkin's Purrfect...</h2>
+				<h2>My Cat Jyn's Purrrfect...</h2>
 				<h1>Meme Picker</h1>
 			</div>
 		</div>
